Combatify 1.21.1 1.2.11 Fabric - fix tooltip